--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jvlcart",
+  "name": "buyandsellapplication",
   "version": "1.0.0",
   "description": "ecommerce using MERN stack",
   "main": "server.js",
@@ -9,7 +9,7 @@
     "prod": "set NODE_ENV=production&&nodemon backend/server.js",
     "seeder": "node backend/utils/seeder.js"
   },
-  "author": "JV Logesh",
+  "author": "Sridhar",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
